--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,7 +133,6 @@ body {
 }
 
 
-
 .mensign button {
     padding: 10px;
     border-radius: 13px;
@@ -152,7 +151,6 @@ body {
     background-color: lightgray;
 }
 
-
 .glav {
     padding-top: 100px;
     width: 100%;
@@ -160,6 +158,75 @@ body {
     padding-left: 35px;
     padding-right: 35px;
 }
+
+.yearFromToUl, .rateFromToUl {
+    padding-left: 0 !important;
+}
+
+.yearFromToUl span, .rateFromToUl span {
+    display: flex;
+    justify-content: left;
+}
+
+.yearFromToUl button, .rateFromToUl button {
+    border: none;
+    background-color: black;
+    color: white;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+    padding: 2px 10px;
+}
+
+.yearFromToUl button:hover {
+    transform: scale(1.05);
+}
+
+.rateFromToUl button:hover {
+    transform: scale(1.05);
+}
+
+.sort-by-wrapper select {
+    padding: 2px;
+}
+
+:root {
+    --background-gradient: linear-gradient(178deg, #ffff33 10%, #3333ff);
+    --gray: #34495e;
+    --darkgray: #2c3e50;
+}
+
+
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sort-by-wrapper select {
+    width: 150px;
+    font-size: 16px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+.sidebar-list li {
+    list-style-type: none;
+}
+
+.sidebar-list {
+    padding-left: 0;
+}
+
+.sidebar-area {
+    border-right: 2px solid black;
+}
+
+.sidebar_main_div {
+    width: 15% !important;
+}
+
 
 .glav1 {
     background-image: url(../img/glavbgimg.png);
@@ -1130,6 +1197,10 @@ body {
         display: block;
     }
 
+    .sidebar_main_div {
+        width: 25% !important;
+    }
+
     .mentext a:not(.mediamen a) {
         display: none;
     }
@@ -1219,6 +1290,33 @@ body {
     top2_1 {
         width: 50%;
     }
+
+    .sidebar-area {
+        display: flex;
+        justify-content: space-between;
+        border-right: none;
+        border-bottom: 2px solid black;
+        flex-wrap: wrap;
+    }
+
+    .for_media {
+        flex-direction: column;
+    }
+
+    .product-wrapper-a {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .sidebar_main_div {
+        width: 100% !important;
+    }
+
+    .media_sidebar_item {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
 }
 
 @media (max-width: 630px) {
